<resources>
    <string name="app_name" translatable="false">Story App</string>
    <string name="check_your_internet_connection">Check your internet connection!</string>
    <string name="something_wrong">Something wrong!</string>
    <string name="password" translatable="false">Password</string>
    <string name="email" translatable="false">Email</string>
    <string name="login">Login</string>
    <string name="register">Add New Account</string>
    <string name="or">Or</string>
    <string name="error_minimum_password">Password must be more than 6 characters</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="must_be_filled">Must be Filled</string>
    <string name="filled_the_form">Filled the Form</string>
    <string name="name">Name</string>
    <string name="success_register">Successfully Registered</string>
    <string name="hai" translatable="false">Hai,</string>
    <string name="data_is_empty">Data is Empty</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="description">Description</string>
    <string name="add_new_story">Add New Story</string>
    <string name="success_add_new_story">Success Added New Story</string>
    <string name="not_getting_permission">Not getting permission</string>
    <string name="appwidget_text" translatable="false">Story App Widget</string>
    <string name="story_image">Story Image</string>
    <string name="retry">Retry</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="empty_location">Lokasi tidak ada</string>
</resources>