<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_login_scene"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="126dp"
        android:layout_height="126dp"
        android:alpha="0"
        android:src="@drawable/ic_story"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18"
        tools:alpha="1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@+id/image_logo"
        tools:alpha="1">

        <com.fghilmany.mvvmstarterproject.ui.custom.CustomTextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/til_email"
        tools:alpha="1">

        <com.fghilmany.mvvmstarterproject.ui.custom.CustomTextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.fghilmany.mvvmstarterproject.ui.custom.CustomMaterialButton
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:enabled="false"
        android:text="@string/login"
        app:name="@string/login"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        tools:alpha="1" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/or"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/bt_login"
        app:layout_constraintStart_toStartOf="@id/bt_login"
        app:layout_constraintTop_toBottomOf="@id/bt_login"
        tools:alpha="1" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/bt_login"
        app:layout_constraintStart_toStartOf="@id/bt_login"
        app:layout_constraintTop_toBottomOf="@id/tv_or"
        tools:alpha="1" />

    <include
        android:id="@+id/view_loading"
        layout="@layout/view_loading"
        android:elevation="8dp"
        android:visibility="gone" />

</androidx.constraintlayout.motion.widget.MotionLayout>