<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">


    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="126dp"
        android:layout_height="126dp"
        android:src="@drawable/ic_story"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginTop="16dp"
        android:alpha="0"
        tools:alpha="1"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@+id/image_logo">

        <com.fghilmany.mvvmstarterproject.ui.custom.CustomTextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="8dp"
        android:alpha="0"
        tools:alpha="1"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@+id/til_name">

        <com.fghilmany.mvvmstarterproject.ui.custom.CustomTextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="8dp"
        android:alpha="0"
        tools:alpha="1"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@+id/til_email">

        <com.fghilmany.mvvmstarterproject.ui.custom.CustomTextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.fghilmany.mvvmstarterproject.ui.custom.CustomMaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:name="@string/register"
        android:id="@+id/bt_login"
        android:enabled="false"
        android:alpha="0"
        tools:alpha="1"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        android:layout_marginTop="16dp"/>

    <include
        layout="@layout/view_loading"
        android:id="@+id/view_loading"
        android:visibility="gone"
        android:elevation="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>