<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddStoryActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="208dp"
        android:id="@+id/cv_add_photo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        app:cardCornerRadius="10dp"
        android:elevation="10dp"
        app:strokeColor="@android:color/darker_gray"
        app:strokeWidth="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_baseline_add_a_photo_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@android:color/darker_gray" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/iv_story"
                android:scaleType="fitXY"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_camera"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/open_camera"
        app:layout_constraintBottom_toBottomOf="@+id/bt_gallery"
        app:layout_constraintEnd_toStartOf="@id/bt_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_add_photo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/open_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bt_camera"
        app:layout_constraintTop_toBottomOf="@id/cv_add_photo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/bt_gallery">

        <com.fghilmany.mvvmstarterproject.ui.custom.CustomTextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_description"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.fghilmany.mvvmstarterproject.ui.custom.CustomMaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_story"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="16dp"
        app:name="@string/add_new_story"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/bt_submit"
        android:enabled="false"/>

    <include
        layout="@layout/view_loading"
        android:id="@+id/view_loading"
        android:visibility="gone"
        android:elevation="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>